<resources>
    <string name="app_name">Ask_MainReal</string>
    <string name="credit_vs_debit_vs_cash_module">Credit vs Debit vs Cash Module</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="progress">Progress</string>
    <string name="lessons_available">Lessons Available</string>
    <string name="lessons_in_progress">Lessons in Progress</string>
    <string name="home">Home</string>
    <string name="cash">Cash</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="lesson_complete">Lesson Complete!</string>
    <string name="keep_going">Keep going!</string>
    <string name="start_next_lesson">Start next lesson</string>
    <string name="review_previous_lessons">Review previous lessons</string>
    <string name="explore_other_topics">Explore other topics</string>
    <string name="topic_1_1_1_what_is_a_credit_card" />
    <string name="checkkmark">checkkmark</string>
    <string name="watch_the_full_video_to_learn_more_about_cash_back_credit_card_programs_and_how_your_weekly_trip_to_the_grocery_store_may_help_you_get_one_step_closer_to_finally_taking_that_dream_vacation_discover"/>
    <string name="quiz_me" />
    <string name="go_back" />
    <string name="topic_1_1_1_what_is_a_credit_card1">Topic 1.1.1: What is a credit card</string>
    <string name="watch_the_full_video_to_learn_more_about_cash_back_credit_card_programs_and_how_your_weekly_trip_to_the_grocery_store_may_help_you_get_one_step_closer_to_finally_taking_that_dream_vacation_discover1">watch the full video to learn more about cash back credit card programs and how your weekly trip to the grocery store may help you get one step closer to finally taking that dream vacation - "discover"</string>
    <string name="go_back1">go back</string>
    <string name="go_back02">Go Back</string>
    <string name="quiz_me01">Quiz Me</string>
    <string name="debit_cards">Debit Cards</string>
    <string name="What_can_you_think_of_credit_cards_as">What can you think of credit cards as, according to the video?</string>
    <string name="enter_answer">Enter answer here</string>
    <string name="If_you_pay_the_minimum">If you pay the minimum, what happens when you need to pay the rest?</string>
    <string name="a_1_1_1">A. Interest is added to the remaining sum per week.</string>
    <string name="b_1_1_1">B. Interest is added to the remaining sum per day.</string>
    <string name="c_1_1_1">C. Interest is added to the remaining sum biweekly.</string>
    <string name="d_1_1_1">D. The remaining total stays the same until you pay that off.</string>
    <string name="what_is_cashback">What is cashback?</string>
    <string name="topic_1_1_2_what_is_cash_back_on_a_credit_card">Topic 1.1.2: What is cash back on a credit Card?</string>
    <string name="how_are_cashback_earnings_limited">How are cashback earnings limited?</string>
    <string name="how_to_utilize_cash_back_rewards_fully">How to utilize cash back rewards fully?</string>
    <string name="some_credit_card_issuers_offer_cash_back_on_a_credit_card_allowing_cardmembers_to_earn_back_a_percentage_of_the_money_spent_on_the_card_the_percentage_you_earn_back_and_how_the_earning_programs_operate_typically_differ_from_issuer_to_issuer_discover">Some credit card issuers offer cash back on a credit card, allowing cardmembers to earn back a percentage of the money spent on the card. The percentage you earn back and how the earning programs operate typically differ from issuer to issuer. - Discover</string>
    <string name="topic_1_2_3_pros_and_cons_of_a_debit_card">Topic 1.2.3: Pros and Cons of a Debit Card</string>
    <string name="topic_1_4_1_what_is_a_credit_score">Topic 1.4.1: What is a credit score?</string>
    <string name="everyone_s_heard_of_a_credit_score_but_what_goes_into_your_personal_number_may_surprise_you_mashable">Everyone\'s heard of a credit score, but what goes into your personal number may surprise you. - Mashable</string>
    <string name="what_range_can_credit_score_be_in_answer">What range can credit score be in? Answer: ___ - ____</string>
    <string name="which_description_best_fits_what_a_credit_score_is">Which description best fits what a credit score is?</string>
    <string name="a_marker_of_someone_s_wealth">A marker of someone\'s wealth</string>
    <string name="a_portrait_of_someone_s_credit_history">A portrait of someone\'s credit history</string>
    <string name="how_much_money_a_person_spends_on_food">How much money a person spends on food</string>
    <string name="topic_1_4_3_ways_to_improve_credit_score">Topic 1.4.3: Ways to improve credit score?</string>
    <string name="building_good_credit_takes_work_but_it_can_be_done_learn_how_to_build_your_credit_and_five_things_you_can_do_to_build_a_healthy_credit_score_while_avoiding_the_pitfalls_with_this_better_money_habits_video_about_establishing_credit_bank_of_america">Building good credit takes work, but it can be done. Learn how to build your credit and five things you can do to build a healthy credit score while avoiding the pitfalls with this Better Money Habits video about establishing credit. - Bank of America</string>
    <string name="financial_editor_jean_chatzky_explains_how_to_frame_the_decision_between_when_to_use_cash_and_when_to_use_credit_nbc_news">Financial Editor Jean Chatzky explains how to frame the decision between when to use cash and when to use credit. - NBC News</string>
    <string name="if_you_re_wondering_what_is_a_debit_card_you_re_in_the_right_place_while_a_debit_card_doesn_t_get_as_much_attention_as_a_credit_card_it_can_be_a_very_useful_tool_practical_personal_finance">If you\'re wondering what is a debit card, you\'re in the right place! While a debit card doesn\'t get as much attention as a credit card, it can be a very useful tool. - Practical Personal Finance</string>
    <string name="credit_score">Credit Score</string>
    <string name="credit_cards">Credit Cards</string>
    <string name="true_or_false_does_a_credit_score_tell_someone_how_likely_they_are_to_pay_off_their_debt">True or False: Does a credit score tell someone how likely they are to pay off their debt?</string>
    <string name="topic_1_4_2_when_to_use_a_credit_score">Topic 1.4.2: When to use a credit score?</string>
    <string name="module_complete">Module Complete</string>
    <string name="start_next_module">Start next module!</string>
</resources>