<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz_1_4_1">


    <Button
        android:id="@+id/home"
        android:layout_width="83dp"
        android:layout_height="41dp"
        android:background="@drawable/green_btn"
        android:text="@string/home"
        android:textSize="10sp"
        android:theme="@style/Button.Green"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />


    <Button
        android:id="@+id/enter"
        android:layout_width="83dp"
        android:layout_height="41dp"
        android:background="@drawable/green_btn"
        android:text="submit"
        android:textSize="10sp"
        android:theme="@style/Button.Green"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />


    <TextView
        android:id="@+id/textView01"
        android:layout_width="356dp"
        android:layout_height="94dp"
        android:background="@drawable/box"
        android:gravity="center"
        android:text="@string/topic_1_4_1_what_is_a_credit_score"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />


    <TextView
        android:id="@+id/textView02"
        android:layout_width="340dp"
        android:layout_height="77dp"
        android:background="@drawable/box"
        android:gravity="center"
        android:text="@string/what_range_can_credit_score_be_in_answer"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.302" />


    <TextView
        android:id="@+id/textView03"
        android:layout_width="340dp"
        android:layout_height="77dp"
        android:background="@drawable/box"
        android:gravity="center"
        android:text="@string/which_description_best_fits_what_a_credit_score_is"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548" />


    <Button
        android:id="@+id/a"
        android:layout_width="296dp"
        android:layout_height="58dp"
        android:background="@drawable/green_btn"
        android:text="A. A representation of how a person spends their money"
        android:theme="@style/Button.Green"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652" />


    <Button
        android:id="@+id/b"
        android:layout_width="296dp"
        android:layout_height="58dp"
        android:background="@drawable/green_btn"
        android:text="B. How much money a person spends on food"
        android:theme="@style/Button.Green"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.739" />


    <Button
        android:id="@+id/c"
        android:layout_width="296dp"
        android:layout_height="58dp"
        android:background="@drawable/green_btn"
        android:text="C. A portrait of someone's credit history"
        android:theme="@style/Button.Green"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826" />


    <Button
        android:id="@+id/d"
        android:layout_width="296dp"
        android:layout_height="58dp"
        android:background="@drawable/green_btn"
        android:text="D. A marker of someone's wealth"
        android:theme="@style/Button.Green"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/enter_answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />


</androidx.constraintlayout.widget.ConstraintLayout>